--- a/cssLevelTwo/landing_page_master.css
+++ b/cssLevelTwo/landing_page_master.css
@@ -3,20 +3,23 @@ body{
   background-color: #00173d;
   text-align: center;
   color: white;
-  border-left: 20px solid #0dd4db;
-  border-bottom: 20px solid #0dd4db;
-  border-right: 20px solid #0dd4db;
+  border: 20px solid #0dd4db;
+  border-top: 0px;
+  margin: 0px;
 }
 p{
-  align-self: auto;
-  width: 60%;
-  margin-left: 150px;
-  margin-top: 50px;
+  padding-top: 5%;
+  padding-left: 20%;
+  padding-right: 20%;
 }
 #sub{
   width: 150px;
   height: 50px;
   margin: 20px;
   border-radius: 10px;
-  background-color: orange;
+  background-color: #FF9F1C;
+}
+form{
+  font-size: 1.5em;
+  margin-bottom: 10px;
 }
