--- a/jQuery/connect_4_master.css
+++ b/jQuery/connect_4_master.css
@@ -2,7 +2,7 @@
 .board button {
   width: 100px;
   height: 100px;
-  background-color: gray;
+  background-color: grey;
   border-radius: 50%;
   border: 4px solid black;
   margin: 1px;
